[tab-under] Exempt navigations to and from chrome-extension schemes

Extensions (like the Great Suspender) want to be able to navigate tabs
in the background. Often these tabs will have opened a popup since their
last user gesture, classifying them as tab-unders.

This CL allows tab-under navigations to and from chrome-extension
schemes, allowing extensions arbitrary redirection as long as they can
round trip through some extension resource.

Bug: 822791
Change-Id: I33b160f0204e2485582432c8ccf2a6722f9721bd
Reviewed-on: https://chromium-review.googlesource.com/1039647
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Charlie Harrison <csharrison@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555466}
Former-commit-id: f2202082cd0cd186acbda7811bdbd961a2febbbe